@@ -2,6 +2,7 @@
  * New Features:
    * FLAC: Skip ID3 tags. Added option to delete them on save.
    * EncodedTextSpec: Make private members more private.
+   * Corrupted Oggs generated by GStreamer (e.g. Sound Juicer) can be read.
 
 1.9 - 2006.12.09
  * New Features:
